// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentCourseDetailsPageComponent should snap with default fields 1`] = `
<tm-student-course-details-page
  Gender={[Function Object]}
  SortBy={[Function Object]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  instructorDetails={[Function Array]}
  instructorService={[Function InstructorService]}
  isLoadingCourse={[Function Boolean]}
  isLoadingInstructor={[Function Boolean]}
  isLoadingStudent={[Function Boolean]}
  isLoadingTeammates="false"
  route={[Function ActivatedRoute]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  teammateProfiles={[Function Array]}
  teammateProfilesSortBy="0"
>
  <h1
    class="page-title"
  >
     
  </h1><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Course
      </h4>
    </div>
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="section"
  >
    
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Instructors
      </h4>
    </div>
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="section"
  >
    
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Self
      </h4>
    </div>
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="section"
  >
    
    
    <div>
      
    </div>
  </div>
</tm-student-course-details-page>
`;

exports[`StudentCourseDetailsPageComponent should snap with populated fields 1`] = `
<tm-student-course-details-page
  Gender={[Function Object]}
  SortBy={[Function Object]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  instructorDetails={[Function Array]}
  instructorService={[Function InstructorService]}
  isLoadingCourse={[Function Boolean]}
  isLoadingInstructor={[Function Boolean]}
  isLoadingStudent={[Function Boolean]}
  isLoadingTeammates="false"
  route={[Function ActivatedRoute]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  teammateProfiles={[Function Array]}
  teammateProfilesSortBy="0"
>
  <h1
    class="page-title"
  >
     Sample Course 101
  </h1><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Course
      </h4>
    </div>
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="section"
  >
    
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Instructors
      </h4>
    </div>
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="section"
  >
    
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Self
      </h4>
    </div>
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div><div
    class="card bg-light mb-4"
  >
    <div
      class="card-body"
    >
      <h5
        class="d-inline"
      >
        <strong>
           Sort By: 
        </strong>
      </h5>
      <div
        class="btn-group"
        data-toggle="buttons"
      >
        <button
          class="btn btn-light"
          id="sort-name"
        >
          Name
        </button>
        <button
          class="btn btn-light"
        >
          Email
        </button>
        <button
          class="btn btn-light"
        >
          Gender
        </button>
        <button
          class="btn btn-light"
        >
          Institution
        </button>
        <button
          class="btn btn-light"
        >
          Nationality
        </button>
      </div>
    </div>
  </div><div
    class="section"
  >
    
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Team Profiles
      </h4>
    </div>
    
    <div>
      
      <div>
        
        <div
          class="row"
        >
          <div
            class="col-12"
          >
            <div
              class="row"
            >
              <div
                class="col-md-2 col-3"
              >
                <img
                  class="profile-pic float-left"
                  src="/assets/images/profile_picture_default.png"
                />
              </div>
              <div
                class="col-md-10 col-9"
              >
                <table
                  class="table table-striped"
                  id="teammates-table-0"
                >
                  <tbody>
                    <tr>
                      <td
                        class="font-weight-bold"
                      >
                        Name
                      </td>
                      <td>
                        <span>
                           I am 2 
                        </span>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="font-weight-bold"
                      >
                        Email
                      </td>
                      <td>
                        <a
                          href="mailto:iam2@hello.com"
                        >
                          iam2@hello.com
                        </a>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="font-weight-bold"
                      >
                        Gender
                      </td>
                      <td>
                        <span>
                          MALE
                        </span>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="font-weight-bold"
                      >
                        Institution
                      </td>
                      <td>
                        <span>
                          nus
                        </span>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="font-weight-bold"
                      >
                        Nationality
                      </td>
                      <td>
                        <span>
                          Andorran
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-student-course-details-page>
`;
